# impact-index

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Cargo.toml  README.md  cliff.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
benches/: sparse.rs
docs/: api.rst  conf.py  index.rst  requirements.txt
examples/: index_to_bmp.py  sparse_index.py  splade_benchmark.py
libs/helpers/: Cargo.toml
libs/helpers/src/: documents.rs  index.rs  lib.rs
python/: Makefile  README.md  impact_index.pyi  test_bmp_convert.py  test_docstore.py  test_index.py  test_scoring.py  test_transforms.py
python/docs/: conf.py  guide.rst  index.rst  requirements.txt
src/: base.rs  bow.rs  builder.rs  docmeta.rs  index.rs  lib.rs  search.rs  sharding.rs
src/bmp/: builder.rs  forward_index_builder.rs  index.rs  mod.rs  posting_list_builder.rs  top_k_heap.rs
src/compress/: docid.rs  impact.rs  mod.rs
src/docstore/: builder.rs  mod.rs  store.rs
src/index/: mod.rs  sparse.rs
src/index/sparse/: builder.rs  compress.rs  daat.rs  index.rs  maxscore.rs  mod.rs  sharding.rs  wand.rs
src/index/sparse/compress/: docid.rs  impact.rs  mod.rs
src/index/sparse/transforms/: mod.rs  split.rs
src/py/: mod.rs  sparse.rs
src/scoring/: bm25.rs  mod.rs
src/search/: maxscore.rs  mod.rs  wand.rs
src/tests/: mod.rs  sparse.rs
src/transforms/: mod.rs  split.rs
src/utils/: buffer.rs
src/vocab/: analyzer.rs  mod.rs  stemmer.rs
tests/: bm25.rs  compress.rs  docstore.rs  index.rs  sparse.rs  split.rs
