[package]
name = "impact-index"
version = "0.27.3"
edition = "2021"
authors = ["Benjamin Piwowarski <benjamin@piwowarski.fr>"]
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "impact_index"
crate-type = ["cdylib", "rlib"]
bench = false
test = false


[[bench]]
name = "sparse"
harness = false

# [[bench.dependencies.helpers]]
# path = "libs/helpers"

[[test]]
name = "index"

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.9.0"
tokio = { version = "1", features = ["full"] }
numpy = "0.20.0"
ndarray = { version = "0.15.4", features = [ "serde" ] }
serde = { version = "^1.0", features = ["derive"] }
simple-error = "0.2.3"
sucds = "0.5.0"
env_logger = "0.9.3"
typetag = "0.2"
memmap2 = "0.5.8"
self_cell = "0.10.2"
bincode = "1.3.3"
ouroboros = "0.15"
intertrait = "0.2.2"
derivative = "2.2.0"
# Manipulating bits
byteorder = "1.4.3"
bitstream-io = "2.3"
# Progress bars & log
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
indicatif = "0.15.0"
# Serialization
ciborium = { version = "0.2" }
serde_json = "1.0.120"
bmp = { path = "BMP" }
protobuf = "^2.27"


[dev-dependencies]
criterion = "0.4.0"
ntest = "0.8.1"
rstest = "0.15.0"
temp-dir = "0.1.11"
rand_distr = "0.4.3"
rand = "0.8.5"

[dev-dependencies.helpers] 
path = "libs/helpers"

[build-dependencies]
pyo3-build-config = "0.20.3"
