[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]

[project]
name = "impact-index"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    {"email" = "benjamin@piwowarski.fr", name = "Benjamin Piwowarski"}
]
readme = "README.md"

[package]
licence = {file = "LICENCE.txt"}
