[package]
name = "helpers"
version = "0.0.1"
edition = "2021"

[lib]
name = "helpers"

[dependencies]
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
temp-dir = "0.1.11"
rand_distr = "0.4.3"
rand = "0.8.5"
ndarray = "0.15.4"
ntest = "*"
impact-index = { path = "../.."}